--- a/lang/de/messages.json
+++ b/lang/de/messages.json
@@ -21,6 +21,7 @@
     "i18n-invalid-lang": "Ung\u00fcltige Sprache: {{0}}",
     "invalid-action": "Ung\u00fcltige Aktion: {{0}}",
     "invalid-file": "Die Datei {{0}} existiert nicht!",
+    "invalid-filter": "Ung\u00fcltiger Filter",
     "invalid-ip": "Kein Interface ist auf die Adresse {{0}} konfiguriert",
     "invalid-path": "Ung\u00fcltiger Pfad.",
     "invalid-template": "Ausgew\u00e4hlte Template ist nicht g\u00fcltig",
@@ -40,6 +41,7 @@
     "news-save-success": "News erfolgreich aktualisiert",
     "no-image": "Unter der angegebenen URL konnte kein SVG-Bild gefunden werden",
     "no-permission": "Keine ausreichenden Rechte, um auf diese Seite zuzugreifen",
+    "notes-saved": "Anmerkungen gespeichert",
     "password-mismatch": "Passwort und Passwortbest\u00e4tigung stimmen nicht \u00fcberein",
     "reboot-unconfirmed": "Sicherheitsabfrage zum Reboot nicht best\u00e4tigt",
     "remote-parse-failed": "Parsen der empfangenen Daten fehlgeschlagen ({{0}})",
