--- a/lang/de/templates/main-menu.json
+++ b/lang/de/templates/main-menu.json
@@ -2,6 +2,7 @@
     "lang_backup": "Backup\/Restore",
     "lang_client": "Client",
     "lang_clientLog": "Client Log",
+    "lang_clientStats": "Client-Statistiken",
     "lang_configurationBasic": "PXE\/Boot",
     "lang_configurationVariables": "KonfigurationsVariablen",
     "lang_dozmod": "Dozentenmodul",
