--- a/lang/en/messages.json
+++ b/lang/en/messages.json
@@ -21,6 +21,7 @@
     "i18n-invalid-lang": "Invalid language: {{0}}",
     "invalid-action": "Invalid action: {{0}}",
     "invalid-file": "The file {{0}} does not exist!",
+    "invalid-filter": "Invalid filter",
     "invalid-ip": "No interface is configured with the address {{0}}",
     "invalid-path": "Invalid path.",
     "invalid-template": "Selected template is not valid",
@@ -40,6 +41,7 @@
     "news-save-success": "News updated successfully",
     "no-image": "Could not find an SVG-image at the given URL",
     "no-permission": "No sufficient privileges to access this page",
+    "notes-saved": "Notes have been saved",
     "password-mismatch": "Password and password confirmation do not match",
     "reboot-unconfirmed": "Confirmation prompt to reboot not confirmed",
     "remote-parse-failed": "Parsing the received data failed ({{0}})",
