--- a/lang/en/templates/main-menu.json
+++ b/lang/en/templates/main-menu.json
@@ -2,6 +2,7 @@
     "lang_backup": "Backup\/Restore",
     "lang_client": "Client",
     "lang_clientLog": "Client Log",
+    "lang_clientStats": "Client statistics",
     "lang_configurationBasic": "PXE\/Boot",
     "lang_configurationVariables": "Configuration Variables",
     "lang_dozmod": "Tutor module",
