[statistics] More tweaks, add detailed memory information, show system manufacturer if known

--- a/lang/de/templates/statistics/machine-main.json
+++ b/lang/de/templates/statistics/machine-main.json
@@ -10,7 +10,10 @@
     "lang_lastSeen": "Letzte Aktivit\u00e4t",
     "lang_macAddr": "MAC-Adresse",
     "lang_machineSummary": "Zusammenfassung",
+    "lang_maximumAbbrev": "Max.",
+    "lang_model": "Modell",
     "lang_ram": "Arbeitsspeicher",
+    "lang_ramSlots": "Speicher-Slots",
     "lang_sockets": "Sockel",
     "lang_tempPart": "Temp. Partition",
     "lang_uuid": "UUID",
