--- a/lang/en/templates/statistics/machine-main.json
+++ b/lang/en/templates/statistics/machine-main.json
@@ -10,7 +10,10 @@
     "lang_lastSeen": "Last activity",
     "lang_macAddr": "MAC address",
     "lang_machineSummary": "Summary",
+    "lang_maximumAbbrev": "max.",
+    "lang_model": "Model",
     "lang_ram": "Memory",
+    "lang_ramSlots": "Memory slots",
     "lang_sockets": "Sockets",
     "lang_tempPart": "Temp. partition",
     "lang_uuid": "UUID",
