--- a/lang/en/templates/statistics/machine-main.json
+++ b/lang/en/templates/statistics/machine-main.json
@@ -9,6 +9,9 @@
     "lang_lastBoot": "Last boot",
     "lang_lastSeen": "Last activity",
     "lang_macAddr": "MAC address",
+    "lang_machineIdle": "Powered on, unused",
+    "lang_machineOccupied": "Powered on, in use",
+    "lang_machineOff": "bwLehrpool not running",
     "lang_machineSummary": "Summary",
     "lang_maximumAbbrev": "max.",
     "lang_model": "Model",
@@ -16,6 +19,7 @@
     "lang_ramSlots": "Memory slots",
     "lang_sockets": "Sockets",
     "lang_tempPart": "Temp. partition",
+    "lang_usageState": "State",
     "lang_uuid": "UUID",
     "lang_virtualCores": "Virtual cores"
 }
