[statistics] Show summary at top, show session details for occupied clients

--- a/lang/en/templates/statistics/machine-main.json
+++ b/lang/en/templates/statistics/machine-main.json
@@ -11,6 +11,7 @@
     "lang_macAddr": "MAC address",
     "lang_machineIdle": "Powered on, unused",
     "lang_machineOccupied": "Powered on, in use",
+    "lang_machineOccupiedBy": "In use by",
     "lang_machineOff": "bwLehrpool not running",
     "lang_machineSummary": "Summary",
     "lang_maximumAbbrev": "max.",
