--- a/lang/de/templates/statistics/machine-main.json
+++ b/lang/de/templates/statistics/machine-main.json
@@ -11,6 +11,7 @@
     "lang_macAddr": "MAC-Adresse",
     "lang_machineIdle": "Eingeschaltet, ungenutzt",
     "lang_machineOccupied": "Eingeschaltet, in Verwendung",
+    "lang_machineOccupiedBy": "In Verwendung durch",
     "lang_machineOff": "Kein bwLehrpool gestartet",
     "lang_machineSummary": "Zusammenfassung",
     "lang_maximumAbbrev": "Max.",
