[statistics] Add table definition, bump db version

--- a/lang/de/templates/statistics/clientlist.json
+++ b/lang/de/templates/statistics/clientlist.json
@@ -4,7 +4,7 @@
     "lang_cpuModel": "CPU",
     "lang_gbRam": "RAM",
     "lang_kvmSupport": "64\u2009Bit G\u00e4ste",
-    "lang_lastSeen": "Zuletzt gesehn",
+    "lang_lastSeen": "Zuletzt gesehen",
     "lang_machine": "Rechner",
     "lang_machineIdle": "Der Rechner ist eingeschaltet und wird zur Zeit nicht benutzt",
     "lang_machineOccupied": "Der Rechner ist eingeschaltet und wird benutzt",
