[statistics] Smart values, show last log lines, location support

--- a/lang/de/templates/statistics/cpumodels.json
+++ b/lang/de/templates/statistics/cpumodels.json
@@ -1,6 +1,6 @@
 {
-    "lang_cpuCores": "Kerne",
-    "lang_cpuCount": "Anzahl",
-    "lang_cpuName": "CPU Typ",
-    "lang_cpuStats": "Prozessoren"
+    "lang_cpuCores": "CPU-Kerne",
+    "lang_modelCount": "Anzahl",
+    "lang_modelName": "Modellname",
+    "lang_modelStats": "PC-Modelle"
 }
