--- a/lang/en/templates/statistics/cpumodels.json
+++ b/lang/en/templates/statistics/cpumodels.json
@@ -1,6 +1,6 @@
 {
-    "lang_cpuCores": "Cores",
-    "lang_cpuCount": "Count",
-    "lang_cpuName": "CPU type",
-    "lang_cpuStats": "Processors"
+    "lang_cpuCores": "CPU cores",
+    "lang_modelCount": "Count",
+    "lang_modelName": "Model name",
+    "lang_modelStats": "PC models"
 }
