[adauth] Add field for homeDirectory attribute

--- a/lang/de/templates/sysconfig/ad-start.json
+++ b/lang/de/templates/sysconfig/ad-start.json
@@ -7,6 +7,9 @@
     "lang_bindDN": "Bind DN",
     "lang_close": "Schlie\u00dfen",
     "lang_customCertificate": "Zur Validierung zus\u00e4tzlich erforderliche (Intermediate-)Zertifikate",
+    "lang_helpHomeAttrHead": "Name des Home-Verzeichnis-Attributs",
+    "lang_helpHomeAttrText": "Hier k\u00f6nnen Sie alternativ zum fest vorgegebenem Template des Home-Verzeichnis Servers den Attributsnamen im Active Directory angeben, der diesen Pfad bereitstellt. Normalerweise ist dies \"homeDirectory\". Wird das Feld leer gelassen, versucht der Assistent, das Attribut selbstst\u00e4ndig zu ermitteln. Falls das Einbinden der Home-Verzeichnisse anschlie\u00dfend nicht funktioniert, \u00fcberpr\u00fcfen Sie bitte den Client-Log (Status->Client Log) und den LDAP-Proxy-Log (Status->Server Status).",
+    "lang_homeAttr": "Home-Attribut",
     "lang_moduleTitle": "Titel",
     "lang_next": "Weiter",
     "lang_password": "Passwort",
