--- a/lang/en/templates/sysconfig/ad-start.json
+++ b/lang/en/templates/sysconfig/ad-start.json
@@ -7,6 +7,9 @@
     "lang_bindDN": "Bind DN",
     "lang_close": "Close",
     "lang_customCertificate": "Additional (intermediate) certificates required for certificate validation",
+    "lang_helpHomeAttrHead": "Name of the home directory attribute",
+    "lang_helpHomeAttrText": "Here you can specify the name of the attribute on the Active Directory that contains the path of the home directory server. Usually this is \"homeDirectory\". If you leave this blank, the wiszard will try to determine the attribute name automatically. If home directories don't work, check the client log (Status->Client log) and the LDAP proxy log (Status->Server status).",
+    "lang_homeAttr": "Home attribute",
     "lang_moduleTitle": "Title",
     "lang_next": "Next",
     "lang_password": "Password",
