[locations] New module for managing locations

--- a/lang/de/messages.json
+++ b/lang/de/messages.json
@@ -1,5 +1,6 @@
 {
     "ad-config-failed": "Wiederherstellen der Active Directory Konfiguration fehlgeschlagen",
+    "added-x-entries": "Eintr\u00e4ge hinzugef\u00fcgt: {{0}}",
     "adduser-disabled": "Keine ausreichenden Rechte, um weitere Benutzer hinzuzuf\u00fcgen",
     "adduser-success": "Benutzer erfolgreich hinzugef\u00fcgt",
     "backup-failed": "Sicherung fehlgeschlagen!",
@@ -25,6 +26,8 @@
     "invalid-ip": "Kein Interface ist auf die Adresse {{0}} konfiguriert",
     "invalid-path": "Ung\u00fcltiger Pfad.",
     "invalid-template": "Ausgew\u00e4hlte Template ist nicht g\u00fcltig",
+    "location-deleted": "Location wurde gel\u00f6scht (Locations: {{0}}, Subnets: {{1}})",
+    "location-updated": "Location {{0}} wurde aktualisiert",
     "loginfail": "Benutzername oder Kennwort falsch",
     "mail-config-saved": "Mail-Konfiguration gespeichert",
     "missing-file": "Es wurde keine Datei ausgew\u00e4hlt!",
@@ -42,6 +45,7 @@
     "no-image": "Unter der angegebenen URL konnte kein SVG-Bild gefunden werden",
     "no-permission": "Keine ausreichenden Rechte, um auf diese Seite zuzugreifen",
     "notes-saved": "Anmerkungen gespeichert",
+    "parameter-missing": "Fehlender Parameter: {{0}}",
     "password-mismatch": "Passwort und Passwortbest\u00e4tigung stimmen nicht \u00fcberein",
     "reboot-unconfirmed": "Sicherheitsabfrage zum Reboot nicht best\u00e4tigt",
     "remote-parse-failed": "Parsen der empfangenen Daten fehlgeschlagen ({{0}})",
@@ -50,6 +54,9 @@
     "replacing-module": "Ersetzen von Modul {{0}}",
     "restore-done": "Wiederherstellung abgeschlossen",
     "settings-updated": "Einstellungen wurden aktualisiert",
+    "subnets-created": "Subnetze angelegt: {{0}}",
+    "subnets-deleted": "Subnetze gel\u00f6scht: {{0}}",
+    "subnets-updated": "Subnetze aktualisiert: {{0}}",
     "task-error": "Ausf\u00fchrung fehlgeschlagen: {{0}}",
     "taskmanager-error": "Verbindung zum Taskmanager fehlgeschlagen",
     "taskmanager-format": "Taskmanager hat ung\u00fcltige Daten zur\u00fcckgeliefert",
