--- a/lang/de/settings/cat_setting.json
+++ b/lang/de/settings/cat_setting.json
@@ -4,5 +4,6 @@
     "cat_3": "Zeitsynchronisation",
     "cat_4": "Grundsystem",
     "cat_5": "Gemeinsames Netzlaufwerk",
-    "cat_6": "Unkategorisiert"
+    "cat_6": "Unkategorisiert",
+    "cat_7": "vmchooser"
 }
