--- a/lang/de/templates/main-menu.json
+++ b/lang/de/templates/main-menu.json
@@ -10,6 +10,7 @@
     "lang_internetAccess": "Internetzugriff",
     "lang_language": "Sprachen",
     "lang_localization": "Lokalisierung + Integration",
+    "lang_locations": "R\u00e4ume\/Orte",
     "lang_login": "Anmelden",
     "lang_logout": "Abmelden",
     "lang_needsSetup": "Einrichtung unvollst\u00e4ndig",
