--- a/lang/en/messages.json
+++ b/lang/en/messages.json
@@ -1,5 +1,6 @@
 {
     "ad-config-failed": "Rebuilding the Active Directory configuration failed",
+    "added-x-entries": "Entries added: {{0}}",
     "adduser-disabled": "Insufficient privileges to add more users",
     "adduser-success": "User successfully added",
     "backup-failed": "Backup failed!",
@@ -25,6 +26,8 @@
     "invalid-ip": "No interface is configured with the address {{0}}",
     "invalid-path": "Invalid path.",
     "invalid-template": "Selected template is not valid",
+    "location-deleted": "Location has been deleted (locations: {{0}}, subnets: {{1}})",
+    "location-updated": "Location {{0}} has been updated",
     "loginfail": "Username or Password incorrect",
     "mail-config-saved": "Mail config saved",
     "missing-file": "There was no file selected!",
@@ -42,6 +45,7 @@
     "no-image": "Could not find an SVG-image at the given URL",
     "no-permission": "No sufficient privileges to access this page",
     "notes-saved": "Notes have been saved",
+    "parameter-missing": "Missing parameter: {{0}}",
     "password-mismatch": "Password and password confirmation do not match",
     "reboot-unconfirmed": "Confirmation prompt to reboot not confirmed",
     "remote-parse-failed": "Parsing the received data failed ({{0}})",
@@ -50,6 +54,9 @@
     "replacing-module": "Replace module {{0}}",
     "restore-done": "Restore done",
     "settings-updated": "Settings have been updated",
+    "subnets-created": "{{0}} subnet(s) created",
+    "subnets-deleted": "{{0}} subnet(s) deleted",
+    "subnets-updated": "{{0}} subnet(s) updated",
     "task-error": "Execution failed: {{0}}",
     "taskmanager-error": "Failed to connect to the Task Manager",
     "taskmanager-format": "Task Manager has returned invalid data",
