--- a/lang/en/settings/cat_setting.json
+++ b/lang/en/settings/cat_setting.json
@@ -4,5 +4,6 @@
     "cat_3": "Time Synchronization",
     "cat_4": "Basic System",
     "cat_5": "Common network share",
-    "cat_6": "Uncategorized"
+    "cat_6": "Uncategorized",
+    "cat_7": "vmchooser"
 }
