--- a/lang/en/templates/main-menu.json
+++ b/lang/en/templates/main-menu.json
@@ -10,6 +10,7 @@
     "lang_internetAccess": "Internet access",
     "lang_language": "Language",
     "lang_localization": "Localization",
+    "lang_locations": "Rooms\/Locations",
     "lang_login": "Login",
     "lang_logout": "Logout",
     "lang_needsSetup": "Setup incomplete",
