--- a/lang/pt/settings/cat_setting.json
+++ b/lang/pt/settings/cat_setting.json
@@ -2,5 +2,6 @@
     "cat_1": "Inatividade e Desligamento",
     "cat_2": "Acesso \u00e0 Internet",
     "cat_3": "Sincroniza\u00e7\u00e3o de Tempo",
-    "cat_4": "Sistema B\u00e1sico"
+    "cat_4": "Sistema B\u00e1sico",
+    "cat_7": "vmchooser"
 }
