[ldapauth] Add homedir conf to ldap wizard

--- a/lang/de/templates/sysconfig/ad_ldap-homedir.json
+++ b/lang/de/templates/sysconfig/ad_ldap-homedir.json
@@ -6,12 +6,13 @@
     "lang_mapModeNativeFallback": "Nativ in der VM einbinden; Fallback auf VMware Shared Folders",
     "lang_mapModeNone": "Verzeichnisse nicht durchreichen",
     "lang_mapModeVmware": "VMware Shared Folders [VMwareTools]",
-    "lang_redirectionWarning": "ACHTUNG: Diese Funktion ist experimentell. Sie Biegt nach dem Starten mittels openslx.exe die ausgew\u00e4hlten Verzeichnisse auf das Home-Verzeichnis des angemeldeten Benutzers um. Da hierzu undokumentierte Windows-Einstellungen zur Laufzeit ge\u00e4ndert werden, k\u00f6nnten zu fr\u00fch gestartete Anwendungen andere Werte sehen. Au\u00dferdem macht diese Funktion mit Windows 10 Probleme. Wir empfehlen, stattdessen die Verzeichnisse wenn gew\u00fcnscht in der Vorlage bereits auf den Laufwerksbuchstaben des Home-Verzeichnisses umzukonfigurieren.",
+    "lang_next": "Weiter",
+    "lang_redirectionWarning": "ACHTUNG: Diese Funktion ist experimentell. Sie biegt nach dem Starten mittels openslx.exe die ausgew\u00e4hlten Verzeichnisse auf das Home-Verzeichnis des angemeldeten Benutzers um (getestet mit Windows 7 und 10). Da hierzu undokumentierte Windows-Einstellungen zur Laufzeit ge\u00e4ndert werden ist nicht garantiert, dass diese Methode in sp\u00e4teren Versionen\/Updates von Windows noch funktioniert. Wir empfehlen, stattdessen die Verzeichnisse - sofern gew\u00fcnscht - bereits in der Vorlage auf den oben konfigurierten Laufwerksbuchstaben des Home-Verzeichnisses umzukonfigurieren.",
     "lang_shareDesktop": "Desktop (Achtung: Vom Dozent angelegte Verkn\u00fcpfungen nicht sichtbar!)",
     "lang_shareDocuments": "Eigene Dokumente",
     "lang_shareDownloads": "Downloads",
     "lang_shareHomeDrive": "Home-Verzeichnis Buchstabe (Windows)",
-    "lang_shareMapCreate": "Ordner auf dem Netzlaufwerk bei bedarf anlegen",
+    "lang_shareMapCreate": "Ordner auf dem Netzlaufwerk bei Bedarf anlegen",
     "lang_shareMedia": "Eigene Musik, Videos, Bilder",
     "lang_shareOther": "Andere (Saved Games, Kontakte, Favoriten, ...)",
     "lang_shareRemapMode": "Einbindemodus"
