--- a/lang/en/templates/sysconfig/ad_ldap-homedir.json
+++ b/lang/en/templates/sysconfig/ad_ldap-homedir.json
@@ -6,7 +6,8 @@
     "lang_mapModeNativeFallback": "Natively map inside VM; fallback to VMware Shared Folders",
     "lang_mapModeNone": "Don't map shares at all",
     "lang_mapModeVmware": "VMware Shared Folders [VMwareTools]",
-    "lang_redirectionWarning": "WARNING: This feature is experimental. It remaps the selected folders after the VM booted (via openslx.exe) to the logged in user's home drive. This might cause problems with applications that start before the pathes are patched, as they will see the old unpatched settings. This also doesn't work fully on Windows 10. If you want to reliably remap these directories, it's recommended to change their locations in the VM before uploading it.",
+    "lang_next": "Next",
+    "lang_redirectionWarning": "WARNING: This feature is experimental. It remaps the selected folders after the VM booted (via openslx.exe) to the logged in user's home drive. This might cause problems with applications that start before the pathes are patched, as they will see the old unpatched settings. Please note that this is usign undocumented or unsupported techniques to achieve this goal. It is not guaranteed that this method will work in future versions or updates of Windows. If you want to reliably remap these directories, you might want to change their locations in the VM before uploading it.",
     "lang_shareDesktop": "Desktop (Might hide shortcuts created by the tutor)",
     "lang_shareDocuments": "My Documents",
     "lang_shareDownloads": "Downloads",
