Implemented new menu, added logic for defining dependencies, move translation files around

--- a/modules/main/lang/en/templates/main-menu.json
+++ b/modules/main/lang/en/templates/main-menu.json
@@ -22,5 +22,7 @@
     "lang_translations": "Translations",
     "lang_vmLocation": "VM Location",
     "lang_warning": "Warning",
-    "lang_webInterface": "Web interface"
+    "lang_webInterface": "Web interface",
+    "lang_loggedInPrefix": "Logged in as",
+    "lang_loggedInSuffix": " "
 }
