Message string editing works now

--- a/modules-available/translation/lang/de/template-tags.json
+++ b/modules-available/translation/lang/de/template-tags.json
@@ -1,20 +1,25 @@
 {
     "lang_adminInfo": "Dies ist eine Liste aller Templates. Die \"Status\"-Spalte zeigt an, wenn f\u00fcr ein Template \u00fcbersetzungen fehlen, oder veraltete Tags definiert sind.",
-    "lang_back": "Z\u00fcruck",
-    "lang_createTag": "TAG schafen",
+    "lang_back": "Zur\u00fcck",
+    "lang_createTag": "Tag erstellen",
     "lang_deleteTAG": "L\u00f6schen",
     "lang_editConfigModule": "Konfigurationsmodulbezeichnungsphrasen editieren",
     "lang_editHardcoded": "Hardcoded-Texte bearbeiten",
     "lang_editMessages": "Nachrichten bearbeiten",
+    "lang_editModules": "Modul bearbeiten",
     "lang_editSettings": "Einstellungstexte bearbeiten",
     "lang_editTemplates": "Template-Texte bearbeiten",
-    "lang_englishTAG": "Englisch TAG",
-    "lang_germanTAG": "Deutsch TAG",
     "lang_langAdministration": "Templates",
-    "lang_newTAG": "Neue Tag",
-    "lang_portugueseTAG": "Portugiesisch TAG",
+    "lang_missing": "Fehlt",
+    "lang_module": "Modul",
+    "lang_sample": "Beispiel",
     "lang_save": "Speichern",
     "lang_status": "Status",
+    "lang_tag": "Tag",
+    "lang_tags": "Tags",
     "lang_templateAdminHelp": "Hier k\u00f6nnen Sie die verwendeten Texte und S\u00e4tze \u00fcbersetzen.",
-    "lang_templateHint": "Hinweis: Gelbe Linie zeigt eine \u00dcbersetzung fehlt und roten Linien zeigen ein Tag wird nicht von das Template verwendet."
+    "lang_templateHint": "Hinweis: Gelbe Linie zeigt eine \u00dcbersetzung fehlt und roten Linien zeigen ein Tag wird nicht von das Template verwendet.",
+    "lang_templates": "Templates",
+    "lang_translation": "\u00dcbersetzung",
+    "lang_unused": "Ungenutzt"
 }
