Translating module strings and custom sections works

--- a/modules-available/backup/lang/de/module.json
+++ b/modules-available/backup/lang/de/module.json
@@ -1,4 +1,4 @@
 {
     "module_name": "Sichern\/Wiederherstellen",
-    "page_title": "Sichern und wiederherstellen"
+    "page_title": "Sichern und Wiederherstellen"
 }
