--- a/modules-available/main/lang/en/template-tags.json
+++ b/modules-available/main/lang/en/template-tags.json
@@ -1,41 +1,24 @@
 {
-    "lang_backup": "Backup\/Restore",
     "lang_bootMenuWarning": "The boot menu is outdated or has not been generated.",
-    "lang_client": "Client",
-    "lang_clientLog": "Client Log",
-    "lang_clientStats": "Client statistics",
-    "lang_configurationBasic": "PXE\/Boot",
-    "lang_configurationVariables": "Configuration Variables",
     "lang_configure": "Configure",
-    "lang_dozmod": "Tutor module",
-    "lang_eventLog": "Server Log",
-    "lang_internetAccess": "Internet access",
     "lang_intro": "This is the bwLehrpool configuration interface.",
     "lang_introGuest": "This is the administration interface of the local bwLehrpool intallation. Please authenticate yourself to adjust settings.",
     "lang_language": "Language",
-    "lang_localization": "Localization",
-    "lang_locations": "Rooms\/Locations",
     "lang_loggedInPrefix": "Logged in as",
     "lang_loggedInSuffix": " ",
     "lang_login": "Login",
     "lang_logout": "Logout",
     "lang_minilinuxMissing": "Important files from the mini Linux installation are missing.",
     "lang_needsSetup": "Setup incomplete",
-    "lang_news": "vmChooser news",
     "lang_next": "Next",
     "lang_noExistingAccount": "No account has been created yet. Sign up to become the administrator.",
     "lang_numerOfImagesMarkedForDeletion": "Images marked for deletion",
     "lang_register": "Register",
-    "lang_server": "Server",
-    "lang_serverStatus": "Server status",
-    "lang_settings": "Settings",
-    "lang_status": "Status",
     "lang_systemConfiguration": "System Configuration",
     "lang_systemConfigurationNotChosen": "A system configuration has not been chosen yet.",
+    "lang_toggleNavigation": "toggle navigation",
     "lang_translations": "Translations",
-    "lang_vmLocation": "VM Location",
     "lang_vmLocationNotSet": "A location for the virtual machine is not set yet.",
     "lang_warning": "Warning",
-    "lang_webInterface": "Web interface",
     "lang_welcome": "Welcome"
 }
