--- a/modules-available/vmstore/lang/en/module.json
+++ b/modules-available/vmstore/lang/en/module.json
@@ -1,3 +1,4 @@
 {
-    "module_name": "Virtual Machine"
+    "module_name": "VM storage location",
+    "page_title": "Setting VM storage location"
 }
