Migrated messages to modules

--- a/lang/en/messages.json
+++ b/lang/en/messages.json
@@ -1,69 +1,14 @@
 {
     "ad-config-failed": "Rebuilding the Active Directory configuration failed",
-    "added-x-entries": "Entries added: {{0}}",
-    "adduser-disabled": "Insufficient privileges to add more users",
-    "adduser-success": "User successfully added",
-    "backup-failed": "Backup failed!",
-    "config-activated": "Configuration {{0}} has been activated",
-    "config-invalid": "Configuration with id {{0}} does not exist",
     "db-update-done": "Database successfully updated",
-    "debug-mode": "The debug mode is active!",
-    "delete-images": "Delete: {{0}}",
     "deleted-tag": "Tag was successfully removed",
     "empty-archive": "The archive contains no files or directories",
-    "empty-field": "A field was not filled",
     "error-archive": "Corrupted archive or unsupported format",
     "error-extract": "Could not unpack archive {{0}} to {{1}}",
     "error-nodir": "The directory {{0}} does not exist.",
-    "error-read": "Error reading {{0}}",
     "error-rename": "Could not rename {{0}} into {{1}}",
-    "error-write": "Failed to write {{0}}",
-    "i18n-empty-tag": "A string without tag was submitted",
-    "i18n-invalid-lang": "Invalid language: {{0}}",
-    "invalid-action": "Invalid action: {{0}}",
     "invalid-file": "The file {{0}} does not exist!",
-    "invalid-filter": "Invalid filter",
-    "invalid-ip": "No interface is configured with the address {{0}}",
     "invalid-path": "Invalid path.",
-    "invalid-template": "Selected template is not valid",
-    "location-deleted": "Location has been deleted (locations: {{0}}, subnets: {{1}})",
-    "location-updated": "Location {{0}} has been updated",
-    "loginfail": "Username or Password incorrect",
-    "mail-config-saved": "Mail config saved",
-    "missing-file": "There was no file selected!",
-    "missing-title": "No title given",
-    "module-added": "Module successfully added",
-    "module-deleted": "Module {{0}} was deleted",
-    "module-edited": "Module has been edited",
-    "module-in-use": "Module {{0}} is still used by Configuration {{1}}",
-    "module-rebuild-failed": "Rebuilding module failed",
-    "module-rebuilding": "Module is rebuilding...",
-    "module-rebuilt": "Module was rebuilt",
-    "news-del-success": "News deleted",
-    "news-empty": "There was no news found in the database",
-    "news-save-success": "News updated successfully",
-    "no-image": "Could not find an SVG-image at the given URL",
-    "no-permission": "No sufficient privileges to access this page",
-    "notes-saved": "Notes have been saved",
-    "parameter-missing": "Missing parameter: {{0}}",
-    "password-mismatch": "Password and password confirmation do not match",
-    "reboot-unconfirmed": "Confirmation prompt to reboot not confirmed",
     "remote-parse-failed": "Parsing the received data failed ({{0}})",
-    "remote-timeout": "Could  not download resource {{0}} ({{1}})",
-    "replacing-config": "Replace config {{0}}",
-    "replacing-module": "Replace module {{0}}",
-    "restore-done": "Restore done",
-    "settings-updated": "Settings have been updated",
-    "subnets-created": "{{0}} subnet(s) created",
-    "subnets-deleted": "{{0}} subnet(s) deleted",
-    "subnets-updated": "{{0}} subnet(s) updated",
-    "task-error": "Execution failed: {{0}}",
-    "taskmanager-error": "Failed to connect to the Task Manager",
-    "taskmanager-format": "Task Manager has returned invalid data",
-    "token": "Invalid token. CSRF attack?",
-    "unsuccessful-action": "Not successful",
-    "updated-tags": "Tags have been updated",
-    "upload-complete": "Upload of {{0}} was successful",
-    "upload-failed": "Upload failed: {{0}}",
-    "value-invalid": "The value {{1}} is invalid for option {{0}} and has been ignored"
+    "upload-complete": "Upload of {{0}} was successful"
 }
