--- a/modules-available/statistics/lang/de/module.json
+++ b/modules-available/statistics/lang/de/module.json
@@ -1,4 +1,5 @@
 {
     "module_name": "Client-Statistiken",
-    "page_title": "Client-Statistiken"
+    "page_title": "Client-Statistiken",
+    "unused": "Ungenutzt"
 }
