--- a/lang/de/messages.json
+++ b/lang/de/messages.json
@@ -1,69 +1,14 @@
 {
     "ad-config-failed": "Wiederherstellen der Active Directory Konfiguration fehlgeschlagen",
-    "added-x-entries": "Eintr\u00e4ge hinzugef\u00fcgt: {{0}}",
-    "adduser-disabled": "Keine ausreichenden Rechte, um weitere Benutzer hinzuzuf\u00fcgen",
-    "adduser-success": "Benutzer erfolgreich hinzugef\u00fcgt",
-    "backup-failed": "Sicherung fehlgeschlagen!",
-    "config-activated": "Konfiguration {{0}} wurde aktiviert",
-    "config-invalid": "Konfiguration mit ID {{0}} existiert nicht",
     "db-update-done": "Datenbank wurde aktualisiert",
-    "debug-mode": "Der Debug-Modus ist aktiv!",
-    "delete-images": "L\u00f6schung: {{0}}",
     "deleted-tag": "Tag wurde entfernt",
     "empty-archive": "Das Archiv enth\u00e4lt keine Dateien oder Verzeichnisse",
-    "empty-field": "Ein Feld wurde nicht ausgef\u00fcllt",
     "error-archive": "Korruptes Archiv oder nicht unterst\u00fctztes Format",
     "error-extract": "Konnte Archiv nicht nach {{0}} entpacken - {{1}}",
     "error-nodir": "Das Verzeichnis {{0}} existiert nicht.",
-    "error-read": "Fehler beim Lesen von {{0}}",
     "error-rename": "Konnte {{0}} nicht in {{1}} umbenennen",
-    "error-write": "Fehler beim Schreiben von {{0}}",
-    "i18n-empty-tag": "Ein String wurde ohne Tag \u00fcbermittelt",
-    "i18n-invalid-lang": "Ung\u00fcltige Sprache: {{0}}",
-    "invalid-action": "Ung\u00fcltige Aktion: {{0}}",
     "invalid-file": "Die Datei {{0}} existiert nicht!",
-    "invalid-filter": "Ung\u00fcltiger Filter",
-    "invalid-ip": "Kein Interface ist auf die Adresse {{0}} konfiguriert",
     "invalid-path": "Ung\u00fcltiger Pfad.",
-    "invalid-template": "Ausgew\u00e4hlte Template ist nicht g\u00fcltig",
-    "location-deleted": "Location wurde gel\u00f6scht (Locations: {{0}}, Subnets: {{1}})",
-    "location-updated": "Location {{0}} wurde aktualisiert",
-    "loginfail": "Benutzername oder Kennwort falsch",
-    "mail-config-saved": "Mail-Konfiguration gespeichert",
-    "missing-file": "Es wurde keine Datei ausgew\u00e4hlt!",
-    "missing-title": "Kein Titel eingegeben",
-    "module-added": "Modul erfolgreich hinzugef\u00fcgt",
-    "module-deleted": "Modul {{0}} wurde gel\u00f6scht",
-    "module-edited": "Modul wurde aktualisiert",
-    "module-in-use": "Modul {{0}} wird noch durch Konfiguration {{1}} verwendet",
-    "module-rebuild-failed": "Neubau des Moduls fehlgeschlagen",
-    "module-rebuilding": "Modul wird neu generiert",
-    "module-rebuilt": "Modul wurde neu generiert",
-    "news-del-success": "News gel\u00f6scht",
-    "news-empty": "Es wurde keine News in der Datenbank gefunden",
-    "news-save-success": "News erfolgreich aktualisiert",
-    "no-image": "Unter der angegebenen URL konnte kein SVG-Bild gefunden werden",
-    "no-permission": "Keine ausreichenden Rechte, um auf diese Seite zuzugreifen",
-    "notes-saved": "Anmerkungen gespeichert",
-    "parameter-missing": "Fehlender Parameter: {{0}}",
-    "password-mismatch": "Passwort und Passwortbest\u00e4tigung stimmen nicht \u00fcberein",
-    "reboot-unconfirmed": "Sicherheitsabfrage zum Reboot nicht best\u00e4tigt",
     "remote-parse-failed": "Parsen der empfangenen Daten fehlgeschlagen ({{0}})",
-    "remote-timeout": "Konnte Ressource {{0}} nicht herunterladen ({{1}})",
-    "replacing-config": "Ersetzen von Konfiguration {{0}}",
-    "replacing-module": "Ersetzen von Modul {{0}}",
-    "restore-done": "Wiederherstellung abgeschlossen",
-    "settings-updated": "Einstellungen wurden aktualisiert",
-    "subnets-created": "Subnetze angelegt: {{0}}",
-    "subnets-deleted": "Subnetze gel\u00f6scht: {{0}}",
-    "subnets-updated": "Subnetze aktualisiert: {{0}}",
-    "task-error": "Ausf\u00fchrung fehlgeschlagen: {{0}}",
-    "taskmanager-error": "Verbindung zum Taskmanager fehlgeschlagen",
-    "taskmanager-format": "Taskmanager hat ung\u00fcltige Daten zur\u00fcckgeliefert",
-    "token": "Ung\u00fcltiges Token. CSRF Angriff?",
-    "unsuccessful-action": "Nicht erfolgreich",
-    "updated-tags": "Tags wurden aktualisiert",
-    "upload-complete": "Upload von {{0}} war erfolgreich",
-    "upload-failed": "Upload schlug fehl: {{0}}",
-    "value-invalid": "Der Wert {{1}} ist ung\u00fcltig f\u00fcr die Option {{0}} und wurde ignoriert"
+    "upload-complete": "Upload von {{0}} war erfolgreich"
 }
