--- a/lang/pt/messages.json
+++ b/lang/pt/messages.json
@@ -1,43 +1,11 @@
 {
-    "adduser-disabled": "Privil\u00e9gios insuficientes para adicionar mais usu\u00e1rios",
-    "adduser-success": "Usu\u00e1rio adicionado com sucesso",
-    "config-activated": "Configura\u00e7\u00e3o {{0}} foi ativada",
-    "config-invalid": "Configura\u00e7\u00e3o com id {{0}} n\u00e3o existe",
-    "debug-mode": "O modo de depura\u00e7\u00e3o est\u00e1 ativo!",
     "deleted-tag": "Tag foi removida com sucesso",
     "empty-archive": "O arquivo n\u00e3o cont\u00e9m arquivos ou diret\u00f3rios",
-    "empty-field": "Um campo n\u00e3o foi preenchido",
     "error-archive": "Arquivo corrompido ou formato n\u00e3o suportado",
     "error-extract": "N\u00e3o foi poss\u00edvel descompactar arquivo {{0}} para {{1}}",
     "error-nodir": "O diret\u00f3rio {{0}} n\u00e3o existe.",
-    "error-read": "Erro ao ler {{0}}",
     "error-rename": "N\u00e3o foi poss\u00edvel renomear {{0}} em {{1}}",
-    "error-write": "Erro ao escrever {{0}}",
-    "invalid-action": "A\u00e7\u00e3o inv\u00e1lida: {{0}}",
     "invalid-file": "O arquivo {{0}} n\u00e3o existe!",
-    "invalid-ip": "Nenhuma interface est\u00e1 configurada com o endere\u00e7o {{0}}",
-    "invalid-template": "Template selecionado n\u00e3o \u00e9 v\u00e1lido",
-    "loginfail": "Nome de usu\u00e1rio ou senha incorreta",
-    "missing-file": "N\u00e3o havia nenhum arquivo selecionado!",
-    "module-added": "M\u00f3dulo adicionado com sucesso",
-    "module-deleted": "M\u00f3dulo {{0}} foi exclu\u00eddo",
-    "module-in-use": "M\u00f3dulo {{0}} ainda \u00e9 usado pela configura\u00e7\u00e3o {{1}}",
-    "news-del-success": "Not\u00edcia exclu\u00edda",
-    "news-empty": "N\u00e3o havia not\u00edcias no banco de dados",
-    "news-save-success": "Not\u00edcia atualizada com sucesso",
-    "no-permission": "N\u00e3o h\u00e1 privil\u00e9gios suficientes para acessar essa p\u00e1gina",
-    "password-mismatch": "Senha e confirma\u00e7\u00e3o de senha n\u00e3o s\u00e3o iguais",
-    "reboot-unconfirmed": "Confirma\u00e7\u00e3o para reinicializar n\u00e3o foi confirmada",
     "remote-parse-failed": "An\u00e1lise dos dados recebidos falhou ({{0}})",
-    "remote-timeout": "N\u00e3o foi poss\u00edvel baixar o recurso {{0}} ({{1}})",
-    "settings-updated": "As configura\u00e7\u00f5es foram atualizadas",
-    "task-error": "Falha na execu\u00e7\u00e3o: {{0}}",
-    "taskmanager-error": "Falha ao conectar-se ao Gerenciador de Tarefas",
-    "taskmanager-format": "Gerenciador de Tarefas retornou dados inv\u00e1lidos",
-    "token": "Token inv\u00e1lido. Ataque CSRF?",
-    "unsuccessful-action": "A a\u00e7\u00e3o n\u00e3o foi bem sucedida",
-    "updated-tags": "Tags foram atualizadas com sucesso",
-    "upload-complete": "Envio de {{0}} foi bem sucedido",
-    "upload-failed": "Envio falhou: {{0}}",
-    "value-invalid": "O valor {{1}} \u00e9 inv\u00e1lido para op\u00e7\u00e3o {{0}} e foi ignorado"
+    "upload-complete": "Envio de {{0}} foi bem sucedido"
 }
