--- a/modules-available/translation/lang/de/messages.json
+++ b/modules-available/translation/lang/de/messages.json
@@ -1,3 +1,6 @@
 {
-    "i18n-invalid-lang": "Ung\u00fcltige Sprache: {{0}}"
+    "i18n-invalid-lang": "Ung\u00fcltige Sprache: {{0}}",
+    "invalid-template": "Ausgew\u00e4hlte Template ist nicht g\u00fcltig",
+    "i18n-empty-tag": "Ein String wurde ohne Tag \u00fcbermittelt",
+    "updated-tags": "Tags wurden aktualisiert"
 }
