Still working in modularization cleanup and refinement

--- a/modules-available/main/lang/en/global-tags.json
+++ b/modules-available/main/lang/en/global-tags.json
@@ -1,4 +1,11 @@
 {
+    "lang_back": "Back",
+    "lang_cancel": "Cancel",
+    "lang_close": "Close",
+    "lang_delete": "Delete",
+    "lang_hint": "Hint",
+    "lang_next": "Next",
+    "lang_save": "Save",
     "lang_today": "Today",
     "lang_yesterday": "Yesterday"
 }
