--- a/modules-available/translation/lang/en/template-tags.json
+++ b/modules-available/translation/lang/en/template-tags.json
@@ -1,8 +1,6 @@
 {
     "lang_adminInfo": "This is a list of all templates. The \"status\"-column tells if there are translations missing, or unused tags are defined.",
-    "lang_back": "Back",
     "lang_createTag": "Create TAG",
-    "lang_deleteTAG": "Delete",
     "lang_editConfigModule": "Edit config module strings",
     "lang_editHardcoded": "Edit hardcoded strings",
     "lang_editMessages": "Edit Messages",
@@ -11,7 +9,6 @@
     "lang_editTemplates": "Edit template strings",
     "lang_global": "Global",
     "lang_globalTooltip": "This tag is global; usually there is no need to translate it explicitly for this module",
-    "lang_hint": "Notice",
     "lang_langAdministration": "Templates",
     "lang_mainHeading": "Translation management",
     "lang_messages": "Messages",
@@ -19,7 +16,6 @@
     "lang_module": "Module",
     "lang_otherStrings": "Other strings",
     "lang_sample": "Sample",
-    "lang_save": "Save",
     "lang_status": "Status",
     "lang_tag": "Tag",
     "lang_tags": "Tags",
@@ -27,6 +23,7 @@
     "lang_templateHint": "Hint: Yellow lines indicate a translation is missing and red lines indicate a tag is not being used by the template.",
     "lang_templates": "Templates",
     "lang_translation": "Translation",
+    "lang_translationHeading": "Manage translations",
     "lang_unused": "Unused",
     "lang_unusedUnreliableHint": "Detection of unused tags only includes currently activated modules. It's possible that a tag marked \"unused\" is actually refered to in a module not activated."
 }
