--- a/modules-available/main/lang/de/global-tags.json
+++ b/modules-available/main/lang/de/global-tags.json
@@ -1,4 +1,11 @@
 {
+    "lang_back": "Zur\u00fcck",
+    "lang_cancel": "Abbrechen",
+    "lang_close": "Schlie\u00dfen",
+    "lang_delete": "L\u00f6schen",
+    "lang_hint": "Hinweis",
+    "lang_next": "Weiter",
+    "lang_save": "Speichern",
     "lang_today": "Heute",
     "lang_yesterday": "Gestern"
 }
